--- a/nginx/static/css/is_public.css
+++ b/nginx/static/css/is_public.css
@@ -1,4 +1,4 @@
-/* nginx/html/css/common.css - Complete UI Styles */
+/* nginx/dynamic_content/css/common.css - Complete UI Styles */
 
 /* CSS Variables */
 :root {
